--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-alpha2'
 
+        // apt
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
