--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile "org.mockito:mockito-core:1.9.5"
+
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
     compile 'com.jakewharton:butterknife:7.0.1'
 
     compile "org.parceler:parceler-api:1.0.1"
