--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         // apt
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
+        // retrolambda
+        classpath 'me.tatarka:gradle-retrolambda:3.2.4'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
